--- a/curling.csproj
+++ b/curling.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CjClutter.ObjLoader" Version="1.0.0" />
+    <PackageReference Include="JeremyAnsel.Media.WavefrontObj" Version="3.0.33" />
     <PackageReference Include="OpenTK" Version="4.8.2" />
   </ItemGroup>
 
